tests/matrices/invalid/invalid_bad_symmetry.mtx
%%MatrixMarket matrix coordinate real ___
% invalid symmetry
4 4 0
